--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/notesapp
+spring.datasource.url = jdbc:mysql://localhost:3306/your_database_name
 #spring.datasource.driver.class.name = com.mysql.cj.jdbc.Driver
-spring.datasource.username = root
-spring.datasource.password=test
+spring.datasource.username = your_username
+spring.datasource.password=your_password
 
 
 #Hibernate Configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.security.user.name=user
-spring.security.user.password=pass
+spring.security.user.name=admin
+spring.security.user.password=admin
